@@ -33,6 +33,7 @@ CURLFTPSSL_CCC_NONE             7.16.1
 CURLFTPSSL_CCC_PASSIVE          7.16.1
 CURLINFO_APPCONNECT_TIME        7.19.0
 CURLINFO_CERTINFO               7.19.1
+CURLINFO_CONDITION_UNMET        7.19.4
 CURLINFO_CONNECT_TIME           7.4.1
 CURLINFO_CONTENT_LENGTH_DOWNLOAD 7.6.1
 CURLINFO_CONTENT_LENGTH_UPLOAD  7.6.1
