@@ -19,6 +19,7 @@ This release includes the following changes:
  o Improved IPv6 support when built with with c-ares >= 1.6.1
  o Added CURLPROXY_HTTP_1_0 and --proxy1.0
  o Added docs/libcurl/symbols-in-versions
+ o Added CURLINFO_CONDITION_UNMET
 
 This release includes the following bugfixes:
 
